syntax = "proto3";

package salonapp.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/williamchand/fullstack-fastapi/backend-go/gen/proto/salonapp/v1;salonappv1";

service DataSourceService {
  rpc CreateDataSource(CreateDataSourceRequest) returns (CreateDataSourceResponse) {
    option (google.api.http) = { post: "/v1/datasources" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement: { key: "BearerAuth" value: {} } }
    };
  }

  rpc TestConnection(TestConnectionRequest) returns (TestConnectionResponse) {
    option (google.api.http) = { post: "/v1/datasources/{id}/test" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement: { key: "BearerAuth" value: {} } }
    };
  }

  rpc IntrospectSchema(IntrospectSchemaRequest) returns (IntrospectSchemaResponse) {
    option (google.api.http) = { get: "/v1/datasources/{id}/schema" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement: { key: "BearerAuth" value: {} } }
    };
  }

  rpc SetAICredential(SetAICredentialRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/ai/credentials" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement: { key: "BearerAuth" value: {} } }
    };
  }

  rpc AskQuestion(AskQuestionRequest) returns (AskQuestionResponse) {
    option (google.api.http) = { post: "/v1/ai/ask" body: "*" };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement: { key: "BearerAuth" value: {} } }
    };
  }
}

message CreateDataSourceRequest {
  string name = 1;
  string type = 2; // postgres, mysql
  string host = 3;
  int32 port = 4;
  string database_name = 5;
  string username = 6;
  string password = 7;
}

message DataSource {
  string id = 1;
  string name = 2;
  string type = 3;
  string host = 4;
  int32 port = 5;
  string database_name = 6;
  string username = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CreateDataSourceResponse { DataSource data_source = 1; }

message TestConnectionRequest { string id = 1; }
message TestConnectionResponse { bool ok = 1; string message = 2; }

message IntrospectSchemaRequest { string id = 1; }
message IntrospectSchemaResponse { string schema_json = 1; string summary = 2; }

message SetAICredentialRequest { string provider = 1; string api_key = 2; }

message AskQuestionRequest { string data_source_id = 1; string question = 2; }
message AskQuestionResponse { string answer = 1; string sql = 2; string result_json = 3; }
